fix(admin-content-edit): show text overflow on next line

--- a/src/admin/content/views/ContentEdit.scss
+++ b/src/admin/content/views/ContentEdit.scss
@@ -10,6 +10,10 @@
 	.o-container {
 		overflow-x: hidden;
 	}
+
+	.c-content > p {
+		overflow-wrap: break-word;
+	}
 }
 
 .c-content-edit-view__sidebar {
